--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <body>
         <div id="counter"></div>
         <div id="quiz"></div>
-        <script src="./Assets/index.js"></script>
+        <script src="./Assets/script.js"></script>
     </body>
 </html>
