added some styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link href="./Assets/styles.css" rel="stylesheet">
         <title>My Quiz</title>
     </head>
-    <body>
-        <div id="counter"></div>
-        <div id="quiz"></div>
+    <body class="background">
+        <div class="text-center" id="counter"></div>
+        <div class="text-center" id="quiz"></div>
         <script src="./Assets/script.js"></script>
         <script src="./Assets/api_marvel.js"></script>
     </body>
