--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="./Assets/styles.css" rel="stylesheet">
-        <title>My Quiz</title>
+        <title>Marvel Super Hero</title>
     </head>
     <body class="background">
         <div class="text-center" id="counter"></div>
